# engram

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  engram.db-shm  engram.db-wal  pyproject.toml  test.ipynb
engram/: __init__.py
engram/core/: concurrency.py  config.py  consolidation.py  delta.py  events.py  exceptions.py  graph.py  ingestion.py  materialization.py  models.py  re_extraction.py  similarity.py
engram/integrations/: mcp_server.py  openai_tools.py
engram/llm/: adapter.py
engram/renderers/: base.py  claude.py  generic.py  gpt.py
engram/sdk/: __init__.py  client.py
engram/server/: app.py  middleware.py
engram/server/routes/: bullets.py  concepts.py  contexts.py  deltas.py  lifecycle.py  materialize.py  schemas.py
engram/storage/: __init__.py  base.py  postgres.py  schema.sql  sqlite.py
tests/: test_api.py  test_concurrency.py  test_consolidation.py  test_core_memory.py  test_delta.py  test_episodic.py  test_events.py  test_graph.py  test_ingestion.py  test_lifecycle.py  test_materialization.py  test_mmr.py  test_models.py  test_reconsolidation_via_delta.py  test_usage_stats_render.py  test_v04_ingestion.py  test_v05_audit_fixes.py  test_v05_integration.py  test_validity_gate.py  test_worked_examples.py
